--- a/.config/hypr/conf/keybindings/default.conf
+++ b/.config/hypr/conf/keybindings/default.conf
@@ -39,7 +39,7 @@ bind = $mainMod SHIFT, J, movewindow, d
 
 
 # Actions
-bind = $mainMod, PRINT, exec, ~/dotfiles/hypr/scripts/screenshot.sh
+bind = $mainMod SHIFT, S, exec, ~/dotfiles/hypr/scripts/screenshot.sh
 bind = $mainMod CTRL, Q, exec, wlogout
 bind = $mainMod SHIFT, W, exec, ~/dotfiles/hypr/scripts/wallpaper.sh
 bind = $mainMod CTRL, W, exec, ~/dotfiles/hypr/scripts/wallpaper.sh select
