--- a/.config/hypr/conf/keybindings/default.conf
+++ b/.config/hypr/conf/keybindings/default.conf
@@ -43,7 +43,7 @@ bind = $mainMod SHIFT, S, exec, ~/dotfiles/hypr/scripts/screenshot.sh
 bind = $mainMod CTRL, Q, exec, wlogout
 bind = $mainMod SHIFT, W, exec, ~/dotfiles/hypr/scripts/wallpaper.sh
 bind = $mainMod CTRL, W, exec, ~/dotfiles/hypr/scripts/wallpaper.sh select
-bind = $mainMod CTRL, RETURN, exec, rofi -show drun
+bind = $mainMod, R, exec, rofi -show drun
 bind = $mainMod CTRL, K, exec, ~/dotfiles/hypr/scripts/keybindings.sh
 bind = $mainMod SHIFT, B, exec, ~/dotfiles/waybar/launch.sh
 bind = $mainMod SHIFT, R, exec, ~/dotfiles/hypr/scripts/loadconfig.sh
