--- a/.config/hypr/conf/keybindings/default.conf
+++ b/.config/hypr/conf/keybindings/default.conf
@@ -37,6 +37,8 @@ bind = $mainMod SHIFT, H, movewindow, l
 bind = $mainMod SHIFT, K, movewindow, u
 bind = $mainMod SHIFT, J, movewindow, d
 
+bind = $mainMod, N, exec, hyprlock
+
 
 # Actions
 bind = $mainMod SHIFT, S, exec, ~/dotfiles/hypr/scripts/screenshot.sh
