--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -67,4 +67,4 @@ source = ~/dotfiles/hypr/conf/ml4w.conf
 # ----------------------------------------------------- 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-exec-once = swaybg -i ~/wallpaper/nordwall2.jpg
+exec-once = swaybg -i ~/wallpaper/myfav.png
