--- a/.config/hypr/conf/decorations/no-rounding.conf
+++ b/.config/hypr/conf/decorations/no-rounding.conf
@@ -6,7 +6,7 @@
 decoration {
     rounding = 0
     blur {
-        enabled = true
+        enabled = false
         size = 6
         passes = 2
         new_optimizations = on
@@ -15,7 +15,7 @@ decoration {
         # blurls = waybar
     }
     active_opacity = 1.0
-    inactive_opacity = 0.8
+    inactive_opacity = 1.0
     fullscreen_opacity = 1.0
 
     drop_shadow = true
