--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,14 +35,14 @@ source = ~/dotfiles/hypr/conf/keyboard.conf
 # ----------------------------------------------------- 
 # Load pywal color file
 # ----------------------------------------------------- 
-source = ~/.cache/wal/colors-hyprland.conf
+# source = ~/.cache/wal/colors-hyprland.conf
 
 # ----------------------------------------------------- 
 # Load configuration files
 # ----------------------------------------------------- 
 source = ~/dotfiles/hypr/conf/window.conf
 source = ~/dotfiles/hypr/conf/decoration.conf
-source = ~/dotfiles/hypr/conf/layout.conf
+# source = ~/dotfiles/hypr/conf/layout.conf
 source = ~/dotfiles/hypr/conf/misc.conf
 source = ~/dotfiles/hypr/conf/keybinding.conf
 source = ~/dotfiles/hypr/conf/windowrule.conf
@@ -60,7 +60,7 @@ source = ~/dotfiles/hypr/conf/custom.conf
 # ----------------------------------------------------- 
 # Custom
 # ----------------------------------------------------- 
-source = ~/dotfiles/hypr/conf/ml4w.conf
+# source = ~/dotfiles/hypr/conf/ml4w.conf
 
 # ----------------------------------------------------- 
 # Environment for xdg-desktop-portal-hyprland
